# apps/grincajg_go/controllers/organization.controller.go
@@ -4,11 +4,20 @@ import (
 	"grincajg/database"
 	"grincajg/models"
 	"grincajg/response"
-	"log"
 
 	"github.com/gofiber/fiber/v2"
 )
 
+// CreateOrganization creates a new organization.
+// @Summary Create a new organization
+// @Description This endpoint creates a new organization and assigns the current logged in user as the admin of the organization.
+// @Tags Organizations
+// @Produce json
+// @Param body body models.CreateOrganizationInput true "Organization creation input"
+// @Success 201 {object} models.Organization "Organization successfully created"
+// @Failure 400 {object} models.Error "Failed to create organization"
+// @Failure 401 {object} models.Error "Unauthorized: User not logged in"
+// @Router /organization [post]
 func CreateOrganization(c *fiber.Ctx) error {
 	var input *models.CreateOrganizationInput
 
@@ -35,14 +44,9 @@ func CreateOrganization(c *fiber.Ctx) error {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": error.Error()})
 	}
 
-	log.Println("orgEntryyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy")
-	log.Println(orgEntry)
-
 	user.OrganizationID = &orgEntry.ID
 
 	result := database.DB.Save(&user)
-	log.Println("resutlttttttttttttttttttttttttt")
-	log.Println(result)
 
 	if result.Error != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"status": "fail", "message": result.Error.Error()})
@@ -52,6 +56,15 @@ func CreateOrganization(c *fiber.Ctx) error {
 
 }
 
+// GetOrganization retrieves the organization the current user belongs to.
+// @Summary Get the current user's organization
+// @Description This endpoint returns the details of the organization the current logged in user belongs to.
+// @Tags Organizations
+// @Produce json
+// @Success 200 {object} models.Organization "Organization data successfully returned"
+// @Failure 401 {object} models.Error "Unauthorized: User not logged in"
+// @Failure 404 {object} models.Error "User does not belong to any organization"
+// @Router /organization [get]
 func GetOrganization(c *fiber.Ctx) error {
 	user := c.Locals("user").(*models.User)
 
@@ -62,7 +75,7 @@ func GetOrganization(c *fiber.Ctx) error {
 	}
 
 	if user.Organization == nil {
-		return response.ErrorResponse(c, "You dont belong to an Organization")
+		return response.ErrorResponseNotFound(c, "User does not belong to any organization")
 	}
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success", "data": fiber.Map{"organization": models.FilterOrganizationRecord(*user.Organization)}})
