# apps/grincajg_go/models/validate.model.go
@@ -4,18 +4,12 @@ import "github.com/go-playground/validator/v10"
 
 var validate = validator.New()
 
-type ErrorResponse struct {
-	Field string `json:"field"`
-	Tag   string `json:"tag"`
-	Value string `json:"value,omitempty"`
-}
-
-func ValidateStruct[T any](payload T) []*ErrorResponse {
-	var errors []*ErrorResponse
+func ValidateStruct[T any](payload T) []*ValidateError {
+	var errors []*ValidateError
 	err := validate.Struct(payload)
 	if err != nil {
 		for _, err := range err.(validator.ValidationErrors) {
-			var element ErrorResponse
+			var element ValidateError
 			element.Field = err.StructNamespace()
 			element.Tag = err.Tag()
 			element.Value = err.Param()
